--- a/public/locales/translate.json
+++ b/public/locales/translate.json
@@ -68,10 +68,10 @@
     "historia_junta_directiva": "Junta directiva",
     "hstoria_subInfo": "La historia de nuestra asociación cultural empezó con la buena voluntad de migrantes puneños, aimaras y quechuas, que llegaron a Lima con sus tradiciones, danzas, música y costumbres. Es decir, con toda su cultura a cuestas. Y no solo era la nostalgia por el terruño, sino también el empeñó por difundir la cultura altiplánica en la capital del Perú.",
     "hstoria_nuestros_fundadores": "NUESTROS FUNDADORES",
-    "nosotros_titulo": "Somos Brisas del Titicaca",
-    "nosotros_subtitulo": "Nuestra labor ha sido reconocida a través de numerosos galardones y distinciones a nivel nacional e internacional. Llevamos con orgullo las tradiciones de Puno a cada escenario, celebrando nuestra rica herencia en cada presentación.",
+    "nosotros_titulo": "Asociación cultural <br />BRISAS DEL TITICACA",
+    "nosotros_subtitulo": "Somos una institución que tiene como fin preservar, fomentar y difundir las diversas expresiones culturales de Puno y del Perú.",
     "nsotros_nuestra_institucion": "Nuestra institución",
-    "nsotros_nuestra_institucion_p1": "La Asociación Cultural Brisas del Titicaca, es una organización sin fines de lucro con 56 años dedicados a preservar, fomentar y difundir las diversas expresiones culturales de Puno y del Perú.",
+    "nsotros_nuestra_institucion_p1": "La Asociación Cultural Brisas del Titicaca, es una organización sin fines de lucro con 62 años dedicados a preservar, fomentar y difundir las diversas expresiones culturales de Puno y del Perú.",
     "nsotros_nuestra_institucion_p2": "Nuestros emblemáticos Almuerzos Show y Noches de Folklore son espectáculos únicos, que nos han valido el reconocimiento nacional e internacional",
     "nsotros_mision": "Misión",
     "nsotros_mision_p1": "Preservamos, fomentamos y difundimos las diversas expresiones culturales de Puno y el Perú con alta satisfacción de nuestros grupos de interés, basándonos en la gran vocación de servicio, alta responsabilidad social de nuestros colaboradores y asociados, sumándonos al compromiso de aportar en el desarrollo cultural, social y económico de la región Puno.",
@@ -118,7 +118,7 @@
     "puquina_carta_fiesta_patronal": "Carta del Día del Patrón",
     "puquina_carta_cocteles": "Menú de Cócteles",
     "puquina_trio_arequipeño_descripcion": "Es una deliciosa combinación de 3 platos emblemáticos de Perú.",
-    "puquina_chairo_descripcion": "Tradición boliviana principalmente de la ciudad de La Paz y también forma parte de una tradición peruana de Puno, conocido plato de origen aimara.",
+    "puquina_chairo_descripcion": "Es un plato criollo con aportes de la cocina andina.",
     "puquina_pisco_sour": "Cóctel peruano tradicional compuesto por pisco, jugo de limón, azúcar, hielo y bitters.",
     "puquina_certificado_titulo": "Reconocimiento de Restaurante Saludable otorgado por la Municipalidad de Lima",
     "puquina_horario_de_atencion": "Horarios de atención",
@@ -129,7 +129,30 @@
     "puquina_hora_atencion": "Horario de atención",
     "puquina_hora_atencion_p1": "Abrimos todos los días, incluido feriados",
     "puquina_hora_atencion_p2": "Lunes a Domingo de 12:00 m a 4 pm",
-    "puquina_hora_atencion_p3": "*Horario sujeto a modificación"
+    "puquina_hora_atencion_p3": "*Horario sujeto a modificación",
+    "footer_sobre_nosotros": "Sobre nosotros",
+    "footer_nuestra_historia": "Nuestra historia",
+    "footer_mision_vision": "Misisión y Visión",
+    "footer_consejo_directivo": "Consejo Directivo",
+    "footer_trabaja_con_nosotros": "Trabaja con Nosotros",
+    "footer_promociones": "Promociones",
+    "footer_eventos": "Eventos",
+    "footer_eventos_culturales": "Eventos Culturales",
+    "footer_eventos_externos": "Eventos Externos",
+    "footer_cultural": "Cultural",
+    "footer_agenda_cultural": "Agenda Cultural",
+    "footer_revista_brisas": "Revista Brisas",
+    "footer_noticias": "Noticias",
+    "footer_estudiantina": "Estudiantina",
+    "footer_radio": "Radio",
+    "footer_puquina_carta_digital": "Carta Digital",
+    "footer_puquina_carta_cocteles": "Carta de Cocteles",
+    "footer_comunicados": "Comunicados",
+    "footer_admisiones": "Admisiones",
+    "footer_asambleas": "Asambleas",
+    "footer_actas": "Actas",
+    "footer_estados_financieros": "Estados Financieros",
+    "nuestros_eventos": "Nuestros Eventos"
   },
   "en": {
     "consultar": "To consult",
@@ -200,10 +223,10 @@
     "historia_junta_directiva": "Board of Directors",
     "hstoria_subInfo": "The history of our cultural association began with the goodwill of migrant people from Puno, Aymara, and Quechua communities who arrived in Lima with their traditions, dances, music, and customs. In other words, they brought their entire culture with them. It was not only nostalgia for their homeland but also a commitment to promote Andean culture in the capital of Peru.",
     "hstoria_nuestros_fundadores": "OUR FOUNDERS",
-    "nosotros_titulo": "We are Brisas del Titicaca",
-    "nosotros_subtitulo": "Our work has been recognized through numerous awards and distinctions at both national and international levels. We proudly carry the traditions of Puno to every stage, celebrating our rich heritage in each performance.",
+    "nosotros_titulo": "Cultural association <br />BRISAS DEL TITICACA",
+    "nosotros_subtitulo": "We are an institution whose purpose is to preserve, promote and disseminate the diverse cultural expressions cultural expressions of Puno and Peru.",
     "nsotros_nuestra_institucion": "Our Institution",
-    "nsotros_nuestra_institucion_p1": "The Brisas del Titicaca Cultural Association is a non-profit organization with 56 years dedicated to preserving, promoting, and disseminating the diverse cultural expressions of Puno and Peru.",
+    "nsotros_nuestra_institucion_p1": "The Brisas del Titicaca Cultural Association is a non-profit organization with 62 years dedicated to preserving, promoting, and disseminating the diverse cultural expressions of Puno and Peru.",
     "nsotros_nuestra_institucion_p2": "Our emblematic Almuerzos Show and Noches de Folklore are unique performances that have earned us national and international recognition.",
     "nsotros_mision": "Mission",
     "nsotros_mision_p1": "We preserve, promote, and disseminate the diverse cultural expressions of Puno and Peru, ensuring high satisfaction for our stakeholders. We are guided by a strong commitment to service and a high level of social responsibility from our collaborators and members, contributing to the cultural, social, and economic development of the Puno region.",
@@ -250,8 +273,8 @@
     "puquina_carta_fiesta_patronal": "Charter for Patronal Festival",
     "puquina_carta_cocteles": "Cocktail Chart",
     "puquina_trio_arequipeño_descripcion": "It is a delicious combination of 3 emblematic dishes of Peru.",
-    "puquina_chairo_descripcion": "tradición boliviana principalmente de la ciudad de La Paz y también forma parte de una tradición peruana de Puno, conocido plato de origen Aimara",
-    "puquina_pisco_sour": "Cóctel Peruano tradicional compuesto por pisco, jugo de limón,azúcar,hielo y bitters.",
+    "puquina_chairo_descripcion": "It is a creole dish with contributions from the Andean cuisine.",
+    "puquina_pisco_sour": "Traditional Peruvian cocktail composed of pisco, lemon juice, sugar, ice and bitters.",
     "puquina_certificado_titulo": "Healthy Restaurant Recognition awarded by the Municipality of Lima.",
     "puquina_horario_de_atencion": "Hours of operation",
     "puquina_horario_descripcion": "We are open every day, including holidays Monday to Sunday from 12:00 m to 4 pm *Hours subject to change",
@@ -261,6 +284,29 @@
     "puquina_hora_atencion": "Hours of Service",
     "puquina_hora_atencion_p1": "We are open every day, including holidays",
     "puquina_hora_atencion_p2": "Monday to Sunday from 12:00 PM to 4:00 PM.",
-    "puquina_hora_atencion_p3": "*Schedule subject to change."
+    "puquina_hora_atencion_p3": "*Schedule subject to change.",
+    "footer_sobre_nosotros": "About Us",
+    "footer_nuestra_historia": "Our History",
+    "footer_mision_vision": "Mission and Vision",
+    "footer_consejo_directivo": "Board of Directors",
+    "footer_trabaja_con_nosotros": "Work with Us",
+    "footer_promociones": "Promotions",
+    "footer_eventos": "Events",
+    "footer_eventos_culturales": "Cultural Events",
+    "footer_eventos_externos": "External Events",
+    "footer_cultural": "Cultural",
+    "footer_agenda_cultural": "Cultural Agenda",
+    "footer_revista_brisas": "Brisas Magazine",
+    "footer_noticias": "News",
+    "footer_estudiantina": "Estudiantina",
+    "footer_radio": "Radio",
+    "footer_puquina_carta_digital": "Digital Chart",
+    "footer_puquina_carta_cocteles": "Cocktail Chart",
+    "footer_comunicados": "Announcements",
+    "footer_admisiones": "Admissions",
+    "footer_asambleas": "Assemblies",
+    "footer_actas": "Minutes",
+    "footer_estados_financieros": "Financial Statements",
+    "nuestros_eventos": "Our events"
   }
 }
